--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
   "type": "module",
   "devDependencies": {},
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
