--- a/backend/.env.development
+++ b/backend/.env.development
@@ -5,3 +5,6 @@ PUERTO_DB=27017
 DB=nutribalance
 SECRET_KEY=secret-key-nutri-balance
 EXPIRED=30d
+
+OPENAI_API_KEY=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
+
