--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.1",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "openai": "^4.77.0"
   },
   "name": "backend",
   "version": "1.0.0",
