--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-query": "3.39.3",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.28.1"
   },
   "devDependencies": {
